[package]
name = "cedar-python"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
description = "Python bindings for Cedar Rust."

[lib]
name = "cedar"
crate-type = ["cdylib"]

[dependencies]
cedar-policy = { version = "4"}
serde_json = "1.0"

# Python bindings
pyo3 = { version = "0.27", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.27"
